feat(auth): add screen for auth not include logic bisnis

--- a/assets/localization/app_localization_en.json
+++ b/assets/localization/app_localization_en.json
@@ -1,3 +1,12 @@
 {
-  "choose_item_online": "choose item online"
+  "goods management": "goods management",
+  "manage your stock of goods and monitor anytime and anywhere": "manage your stock of goods and monitor anytime and anywhere",
+  "pos orientation": "pos orientation",
+  "management of incoming and outgoing goods and management of payments": "management of incoming and outgoing goods and management of payments",
+  "next": "next",
+  "skip": "skip",
+  "get started": "get started",
+  "login": "login",
+  "register": "register",
+  "welcome you": "welcome you"
 }
