--- a/assets/localization/app_localization_id.json
+++ b/assets/localization/app_localization_id.json
@@ -1,3 +1,12 @@
 {
-  "choose_item_online": "pilih barang secara online"
+  "goods management": "manajemen barang",
+  "manage your stock of goods and monitor anytime and anywhere": "atur stok barang anda dan lakukan pemantauan kapanpun dan dimana pun",
+  "pos orientation": "orientasi pos",
+  "management of incoming and outgoing goods and management of payments": "manajemen keluar masuk barang dan manajemen pembayaran",
+  "get started": "memulai",
+  "next": "lanjutkan",
+  "skip": "lewatkan",
+  "login": "masuk",
+  "register": "daftar",
+  "welcome you": "selamat datang"
 }
