feat: add color crud

--- a/assets/localization/app_localization_en.json
+++ b/assets/localization/app_localization_en.json
@@ -29,5 +29,17 @@
   "language": "language",
   "choose your choose": "choose your language",
   "home": "home",
-  "account": "axxount"
-}
+  "account": "account",
+  "report": "report",
+  "stock": "stock",
+  "purchase": "purchase",
+  "booking": "booking",
+  "setting": "setting",
+  "user": "user",
+  "color": "color",
+  "my activity": "my activity",
+  "search color": "search color",
+  "add color": "add color",
+  "color name": "color name",
+  "choose color": "choose color",
+  "clear all": "clear all"}
