--- a/assets/localization/app_localization_id.json
+++ b/assets/localization/app_localization_id.json
@@ -42,5 +42,9 @@
   "add color": "tambah warna",
   "color name": "nama warna",
   "choose color": "pilih warna",
-  "clear all": "bersihkan semua"
+  "clear all": "bersihkan semua",
+  "success": "berhasil",
+  "failed": "gagal",
+  "failed to process data, please try again": "gagal memproses data, silahkan coba lagi",
+  "the color has been removed successfully": "warna berhasil dihapus"
 }
