chore(onboarding): remove on boarding screen

--- a/assets/localization/app_localization_en.json
+++ b/assets/localization/app_localization_en.json
@@ -46,5 +46,30 @@
   "success": "success",
   "failed": "failed",
   "failed to process data, please try again": "failed to process data, please try again",
-  "the color has been removed successfully": "the color has been removed successfully"
+  "the color has been removed successfully": "the color has been removed successfully",
+  "customer": "customer",
+  "customer type": "customer type",
+  "size": "size",
+  "cloth category": "cloth category",
+  "change password": "change password",
+  "search user": "search user",
+  "load": "load",
+  "name": "name",
+  "email": "email",
+  "password": "password",
+  "gender": "gender",
+  "role": "role",
+  "store": "store",
+  "update": "update",
+  "man": "man",
+  "woman": "woman",
+  "data deleted successfully": "data deleted successfully",
+  "search": "search",
+  "phone number": "phone number",
+  "province": "province",
+  "regency": "regency",
+  "district": "district",
+  "village": "village",
+  "description": "description",
+  "choose": "choose"
 }
