--- a/assets/localization/app_localization_id.json
+++ b/assets/localization/app_localization_id.json
@@ -46,5 +46,30 @@
   "success": "berhasil",
   "failed": "gagal",
   "failed to process data, please try again": "gagal memproses data, silahkan coba lagi",
-  "the color has been removed successfully": "warna berhasil dihapus"
+  "the color has been removed successfully": "warna berhasil dihapus",
+  "customer": "pelanggan",
+  "customer type": "tipe pelanggan",
+  "size": "ukuran",
+  "cloth category": "kategori pakaian",
+  "change password": "ubah password",
+  "search user": "cari pengguna",
+  "load": "memuat",
+  "name": "nama",
+  "email": "email",
+  "password": "kata sandi",
+  "gender": "jenis kelamin",
+  "role": "peran",
+  "store": "tambah",
+  "update": "perbarui",
+  "man": "pria",
+  "woman": "wanita",
+  "data deleted successfully": "data berhasil dihapus",
+  "search": "cari",
+  "phone number": "nomor handphone",
+  "province": "provinsi",
+  "regency": "kabupaten",
+  "district": "kecamatan",
+  "village": "kelurahan",
+  "description": "deskripsi",
+  "choose": "pilih"
 }
