fix feedback cloth category

--- a/assets/localization/app_localization_id.json
+++ b/assets/localization/app_localization_id.json
@@ -48,7 +48,7 @@
   "failed to process data, please try again": "gagal memproses data, silahkan coba lagi",
   "the color has been removed successfully": "warna berhasil dihapus",
   "customer": "pelanggan",
-  "customer type": "tipe pelanggan",
+  "customer type": "kategori pelanggan",
   "size": "ukuran",
   "cloth category": "kategori pakaian",
   "change password": "ubah password",
