feat(product): add management product

--- a/assets/localization/app_localization_en.json
+++ b/assets/localization/app_localization_en.json
@@ -72,5 +72,8 @@
   "village": "village",
   "description": "description",
   "choose": "choose",
-  "cloth price type": "cloth price type"
+  "cloth price type": "cloth price type",
+  "product": "product",
+  "add": "add",
+  "image": "image"
 }
