feat: add order

--- a/assets/localization/app_localization_en.json
+++ b/assets/localization/app_localization_en.json
@@ -75,5 +75,6 @@
   "cloth price type": "cloth price type",
   "product": "product",
   "add": "add",
-  "image": "image"
+  "image": "image",
+  "sale": "sale"
 }
