--- a/assets/localization/app_localization_id.json
+++ b/assets/localization/app_localization_id.json
@@ -75,5 +75,6 @@
   "cloth price type": "tipe harga pakaian",
   "product": "produk",
   "add": "tambah",
-  "image": "gambar"
+  "image": "gambar",
+  "sale": "penjualan"
 }
