feat(widget): scroll refresh

--- a/assets/localization/app_localization_en.json
+++ b/assets/localization/app_localization_en.json
@@ -76,5 +76,6 @@
   "product": "product",
   "add": "add",
   "image": "image",
-  "sale": "sale"
+  "sale": "sale",
+  "created by": "created by"
 }
