--- a/assets/localization/app_localization_id.json
+++ b/assets/localization/app_localization_id.json
@@ -76,5 +76,6 @@
   "product": "produk",
   "add": "tambah",
   "image": "gambar",
-  "sale": "penjualan"
+  "sale": "penjualan",
+  "created by": "dibuat oleh"
 }
